# travel_planner

./: .coverage  .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  DEPLOYMENT_SUMMARY.md  Dockerfile.fastapi  Dockerfile.streamlit  LICENSE  README.md  TESTING_GUIDE.md  apprunner-fastapi.yaml  apprunner-streamlit.yaml  config.py  deploy.sh  pyproject.toml  requirements.txt  research_results.json  setup-aws.sh  streamlit_app.py  user_profile_f535c4a4-fd9b-4b87-8f6b-ce92fd2d4040.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml
agents/: budget_agent.py  budget_manager.py  chat_agent.py  itinerary_agent.py  planner_agent.py  research_agent.py
agents/prompts/: chat_guidance_ask.md  chat_guidance_summary.md  explain_failure.md  explain_failure_user.md
api/: __init__.py  main.py
data/: sample_queries.json
evaluation/: benchmark_adapter.py  evaluate_plan.py  evaluate_plan_llm.py  mock_hotels.py  test_adapter.py  test_single_query.py
manual_tests/: manual_test_hotels.py
prompts/: __init__.py  extract_preferences.md  final_plan.md  intake.md  itinerary.md
tests/: conftest.py  test_agent_workflow.py  test_car_rental.py  test_chatter_agent_all.py  test_dining.py  test_flight.py  test_fuel_price.py  test_hotels.py  test_prompts.py
tests/agents/: test_chat_agent.py  test_itinerary_agent.py  test_research_agent.py
tests/tools/: test_attractions.py  test_dining.py  test_distance_matrix.py  test_flight.py  test_fuel_price.py  test_hotels.py  test_weather.py
tests/workflows/: test_travel_workflow.py
tools/: attractions.py  car_price.py  car_rental.py  dining.py  distance_matirx.py  distance_matrix.py  flight.py  fuel_price.py  hotels.py  routes.py  streetview.py  weather.py  weather_v2.py
workflows/: batch_run.py  runtime.py  schemas.py  state.py  storage.py  test_live.py  travel_graph.py  workflow.py
