[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "travel-planner"
version = "0.1.0"
description = "Multi-agent travel planner using LangGraph and Google AI"
requires-python = ">=3.11"
dependencies = [
    # Core agent framework
    "langgraph>=0.2",
    "langchain-core",
    "langchain-google-genai>=3.0",
    "typing_extensions",
    "amadeus",
    # AI/LLM
    "pydantic-ai>=1.9",
    "pydantic-ai-slim>=1.9",
    "google-genai>=1.7.0",
    # Data validation & API
    "pydantic>=2.0",
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
    # HTTP client
    "httpx>=0.27",
    "tenacity>=8.2",
    # UI
    "streamlit>=1.36",
    "watchfiles>=0.21",
    # Environment variables
    "python-dotenv>=1.0.0",
    # Session storage
    "redis>=5.0.0",
    "hiredis>=2.2.0",
    # AWS integration (optional, for Secrets Manager)
    "boto3>=1.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.1",
    "ruff>=0.14",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 150
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["W293", "W291"]  # Allow blank line whitespace and trailing whitespace

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    "*/site-packages/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
